assets-nsg/css/style.css
/* ... */
.common-slider .owl-nav .owl-prev {
  left: 0;
}
.common-slider .owl-nav .owl-prev span {
  background-image: url("../images/prev.svg");
}
.common-slider .owl-nav .owl-next {
  right: 0;
}
.common-slider .owl-nav .owl-next span {
  background-image: url("../images/next.svg");
}
.common-slider .owl-dot {
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #ffffff;
  margin: 5px;
}
.common-slider .owl-dots {
  display: flex;
  align-items: center;
  justify-content: center;
}
.common-slider .owl-dot.active {
  background: #b01116 !important;
}
.common-slider .owl-dot span {
  border: 1px solid #707070;
  width: 12px;
  height: 12px;
  display: block;
  border-radius: 50%;
}


@media (max-width: 1350px) {
  div#gallerySlider .owl-item .item img {
    height: 380px;
    object-fit: cover;
}
}
/* img.copyprevention-processed {
  width: 100%;
} */

#nsg_datatableForm tbody tr td:last-child, #nsg_datatableForm thead tr th:last-child{
  display: none !important;
}

@media (max-width: 767px) {
  #common-slider .owl-nav button{
    top: 40%;
    border-radius: 0;
    width: 20px;
    height: 20px;
  }
  .achievement-wrap {
    padding: 3em 0;
}
.achievement-wrap .card-white{margin-top: 15px;}
.list-wrap .date{margin-bottom: 3px;}
.site-footer-bottom .col-md-5.col-5 {
  width: 100%;
}
.site-footer-middle{padding: 26px 0 20px;}

form.row.info1 .search-box button.more.gallery-more-btn.submit-btn-apply {
  margin-top: 10px !important;
}

table.dataTable {
  overflow: auto;
  display: block;
  width: 100% !important;
}
.veer-info {
  margin-top: 16px;
}
.veer-accordion .veer-info ul li{
  margin-bottom: 10px;
}

.veer-accordion .veer-info ul li .desc {
        font-size: 1em;
        width: 57%;
        text-align: right;
      }

  .veer-accordion .veer-info ul li .title{width: 43%;font-size: 14px;}
  .veer-accordion .accordion-body .brief-wrap.show img{display: none;}
  .veer-accordion .accordion-body .brief-wrap .title{font-size: 1.2em;}
  .btn-wrap.d-flex.flex-wrap.mt-5 {
    margin-top: 1.2rem !important;
}
.common-card {  
  word-wrap: break-word;
} 

#common-slider .owl-dots {
  display: block;}
}

